remove scrollbar bug

--- a/styles/main.scss
+++ b/styles/main.scss
@@ -158,11 +158,6 @@ body {
 	left: 0;
 }
 
-.lightbox_image_caption {
-	overflow-y: scroll;
-	-webkit-overflow-scrolling: touch;
-}
-
 .lightbox_image_caption a {
 	word-break: break-word;
 }
